@@ -99,6 +99,21 @@ ns_param   urlstats        true      ;# Enable URL statistics.
 ns_param   maxurlstats     1000      ;# Max number of URL's to do stats on.
 ns_param   enabletclpages  false     ;# Parse *.tcl files in pageroot.
 
+
+#
+# Scaling and Tuning Options
+#
+#  Note: These values aren't necessarily the defaults.
+#
+#ns_param   connsperthread  0         ;# Normally there's one conn per thread
+#ns_param   flushcontent    false     ;# Flush all data before returning
+#ns_param   maxconnections  100       ;# Max connections to put on queue
+#ns_param   maxdropped      0         ;# Shut down if dropping too many conns
+#ns_param   maxthreads      20        ;# Tune this to scale your server
+#ns_param   minthreads      0         ;# Tune this to scale your server
+#ns_param   threadtimeout   120       ;# Idle threads die at this rate
+
+
 # Directory listings -- use an ADP or a Tcl proc to generate them.
 #ns_param   directoryadp    $pageroot/dirlist.adp ;# Choose one or the other.
 #ns_param   directoryproc   _ns_dirlist           ;#  ...but not both!
